--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,12 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
+    "flowbite": "^3.1.2",
     "pinia": "^3.0.3",
+    "primeicons": "^7.0.0",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
@@ -21,9 +26,9 @@
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^8.0.4",
+    "sass": "^1.89.2",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
-    "vite-plugin-vue-devtools": "^7.7.7",
     "vue-tsc": "^2.2.10"
   }
 }
