--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "flowbite": "^3.1.2",
+    "leaflet": "^1.9.4",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
+    "vue-map-ui": "^0.0.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
