--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,6 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "flowbite": "^3.1.2",
-    "leaflet": "^1.9.4",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "tailwindcss": "^4.1.11",
@@ -26,7 +25,9 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^6.0.0",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/tsconfig": "^0.7.0",
+    "leaflet": "^1.9.4",
     "npm-run-all2": "^8.0.4",
     "sass": "^1.89.2",
     "typescript": "~5.8.0",
